[package]
name = "swe-edge-egress-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "TTL-based HTTP cache middleware with configurable default_ttl_seconds + RFC 7234 Cache-Control honor. Simpler than full RFC 7234 (no Vary, no ETag conditional revalidation)."
keywords = ["http", "cache", "reqwest", "middleware", "swe"]
categories = ["web-programming::http-client"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
http = { workspace = true }
moka = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
# `from_config` loads policy from TOML. `serde` derives the
# schema; `toml` parses it. Policy values live in
# `config/default.toml` + consumer overrides — never as hardcoded
# literals in source.
serde = { workspace = true }
toml = { workspace = true }
swe-edge-configbuilder.workspace = true
tracing = { workspace = true, optional = true }
# `tokio::spawn` fires the stale-while-revalidate background
# refresh task. Only `rt` is needed at runtime — the caller's
# runtime (tokio itself, typically) executes the spawned future.
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
swe-edge-configbuilder = { workspace = true }
http = { workspace = true }


[features]
default = []
# Emit spans via the `tracing` crate. Off by default so consumers
# without tracing infrastructure don't pay the cost.
tracing = ["dep:tracing"]

[[test]]
name = "builder_e2e_test"
path = "tests/builder_e2e_test.rs"

[[test]]
name = "builder_int_test"
path = "tests/builder_int_test.rs"

[[test]]
name = "cache_config_int_test"
path = "tests/cache_config_int_test.rs"

[[test]]
name = "cache_layer_int_test"
path = "tests/cache_layer_int_test.rs"

[[test]]
name = "cached_entry_int_test"
path = "tests/cached_entry_int_test.rs"

[[test]]
name = "core_cache_layer_int_test"
path = "tests/core_cache_layer_int_test.rs"

[[test]]
name = "default_http_cache_int_test"
path = "tests/default_http_cache_int_test.rs"

[[test]]
name = "error_int_test"
path = "tests/error_int_test.rs"

[[test]]
name = "gateway_int_test"
path = "tests/gateway_int_test.rs"

[[test]]
name = "http_cache_int_test"
path = "tests/http_cache_int_test.rs"

[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "processor_int_test"
path = "tests/processor_int_test.rs"

[[test]]
name = "cache_svc_int_test"
path = "tests/cache_svc_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"
[[test]]
name = "cache_error_int_test"
path = "tests/cache_error_int_test.rs"
[[test]]
name = "http_cache_svc_int_test"
path = "tests/http_cache_svc_int_test.rs"

[[test]]
name = "moka_dep_int_test"
path = "tests/moka_dep_int_test.rs"

[[test]]
name = "reqwest_dep_int_test"
path = "tests/reqwest_dep_int_test.rs"

[[test]]
name = "configbuilder_dep_int_test"
path = "tests/configbuilder_dep_int_test.rs"

[[test]]
name = "request_snapshot_int_test"
path = "tests/request_snapshot_int_test.rs"

[[test]]
name = "ttl_decision_int_test"
path = "tests/ttl_decision_int_test.rs"

[[test]]
name = "cache_entry_helper_int_test"
path = "tests/cache_entry_helper_int_test.rs"

[[test]]
name = "vary_directive_int_test"
path = "tests/vary_directive_int_test.rs"

[[test]]
name = "http_dep_int_test"

[[test]]
name = "cached_entry_builder_int_test"
path = "tests/cached_entry_builder_int_test.rs"
