[package]
name = "swe-edge-egress-cassette"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "VCR-style record/replay middleware for deterministic e2e tests"
keywords = ["http", "cassette", "reqwest", "middleware", "swe"]
categories = ["web-programming::http-client"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
http = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
# `from_config` loads policy from TOML.
toml = { workspace = true }
swe-edge-configbuilder.workspace = true
tokio = { workspace = true, features = ["fs", "sync"] }
tracing = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tempfile = "3"
base64 = { workspace = true }

[features]
default = []
# Emit spans via the `tracing` crate. Off by default so consumers
# without tracing infrastructure don't pay the cost.
tracing = ["dep:tracing"]


[[test]]
name = "body_scrubber_int_test"
path = "tests/body_scrubber_int_test.rs"

[[test]]
name = "builder_e2e_test"
path = "tests/builder_e2e_test.rs"

[[test]]
name = "builder_int_test"
path = "tests/builder_int_test.rs"

[[test]]
name = "cassette_config_int_test"
path = "tests/cassette_config_int_test.rs"

[[test]]
name = "cassette_layer_int_test"
path = "tests/cassette_layer_int_test.rs"

[[test]]
name = "core_cassette_layer_int_test"
path = "tests/core_cassette_layer_int_test.rs"

[[test]]
name = "default_http_cassette_int_test"
path = "tests/default_http_cassette_int_test.rs"

[[test]]
name = "error_int_test"
path = "tests/error_int_test.rs"

[[test]]
name = "gateway_int_test"
path = "tests/gateway_int_test.rs"

[[test]]
name = "http_cassette_int_test"
path = "tests/http_cassette_int_test.rs"

[[test]]
name = "recorded_interaction_int_test"
path = "tests/recorded_interaction_int_test.rs"

[[test]]
name = "saf_builder_int_test"
path = "tests/saf_builder_int_test.rs"

[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "processor_int_test"
path = "tests/processor_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "cassette_error_int_test"
path = "tests/cassette_error_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"
[[test]]
name = "http_cassette_svc_int_test"
path = "tests/http_cassette_svc_int_test.rs"


[[test]]
name = "reqwest_dep_int_test"
path = "tests/reqwest_dep_int_test.rs"
