[package]
name         = "swe-edge-egress-oauth"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "OAuth2 token-refresh middleware for edge egress — abstract OAuthTokenSource trait and reqwest-middleware shell."
keywords     = ["oauth", "auth", "reqwest", "middleware", "swe"]
categories   = ["web-programming::http-client", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace        = true
anyhow.workspace             = true
futures.workspace            = true
reqwest.workspace            = true
reqwest-middleware.workspace  = true
http.workspace               = true
thiserror.workspace          = true
tokio                        = { workspace = true, features = ["sync"] }
tracing.workspace            = true
serde.workspace              = true
toml.workspace               = true
swe-edge-configbuilder.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }


[[test]]
name = "refresh_strategy_int_test"
path = "test/refresh_strategy_int_test.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
