[package]
name         = "swe-edge-egress-oauth"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "OAuth2 token-refresh middleware for edge egress — abstract OAuthTokenSource trait and reqwest-middleware shell."
keywords     = ["oauth", "auth", "reqwest", "middleware", "swe"]
categories   = ["web-programming::http-client", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace        = true
anyhow.workspace             = true
futures.workspace            = true
reqwest.workspace            = true
http.workspace               = true
reqwest-middleware.workspace  = true
thiserror.workspace          = true
tokio                        = { workspace = true, features = ["sync"] }
tracing.workspace            = true
serde.workspace              = true
toml.workspace               = true
swe-edge-configbuilder.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
swe-edge-configbuilder = { workspace = true }
futures = { workspace = true }
reqwest-middleware = { workspace = true }


[[test]]
name = "refresh_strategy_int_test"
path = "tests/refresh_strategy_int_test.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "oauth_svc_int_test"
path = "tests/oauth_svc_int_test.rs"

[[test]]
name = "processor_int_test"
path = "tests/processor_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"
[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"

[[test]]
name = "configbuilder_dep_int_test"
path = "tests/configbuilder_dep_int_test.rs"
[[test]]
name = "o_auth_config_int_test"
path = "tests/o_auth_config_int_test.rs"

[[test]]
name = "o_auth_error_int_test"
path = "tests/o_auth_error_int_test.rs"

[[test]]
name = "o_auth_result_int_test"
path = "tests/o_auth_result_int_test.rs"

[[test]]
name = "o_auth_builder_int_test"
path = "tests/o_auth_builder_int_test.rs"

[[test]]
name = "o_auth_builder_ops_int_test"
path = "tests/o_auth_builder_ops_int_test.rs"

[[test]]
name = "o_auth_credentials_int_test"
path = "tests/o_auth_credentials_int_test.rs"

[[test]]
name = "o_auth_middleware_int_test"
path = "tests/o_auth_middleware_int_test.rs"

[[test]]
name = "o_auth_provider_int_test"
path = "tests/o_auth_provider_int_test.rs"

[[test]]
name = "o_auth_token_source_int_test"
path = "tests/o_auth_token_source_int_test.rs"

[[test]]
name = "refresh_spec_int_test"
path = "tests/refresh_spec_int_test.rs"

[[test]]
name = "cached_token_int_test"
path = "tests/cached_token_int_test.rs"

[[test]]
name = "failing_token_source_int_test"
path = "tests/failing_token_source_int_test.rs"

[[test]]
name = "o_auth_strategy_int_test"
path = "tests/o_auth_strategy_int_test.rs"

[[test]]
name = "static_token_source_int_test"
path = "tests/static_token_source_int_test.rs"

[[test]]
name = "time_helper_int_test"
path = "tests/time_helper_int_test.rs"

[[test]]
name = "o_auth_builder_types_int_test"
path = "tests/o_auth_builder_types_int_test.rs"

[[test]]
name = "o_auth_svc_int_test"
path = "tests/o_auth_svc_int_test.rs"

[[test]]
name = "cached_token_core_int_test"
path = "tests/cached_token_core_int_test.rs"

[[test]]
name = "failing_token_source_core_int_test"
path = "tests/failing_token_source_core_int_test.rs"

[[test]]
name = "static_token_source_core_int_test"
path = "tests/static_token_source_core_int_test.rs"
