[package]
name = "swe-edge-egress-retry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Opinionated retry middleware (wraps reqwest-retry with SWE defaults)"
keywords = ["http", "retry", "reqwest", "middleware", "swe"]
categories = ["web-programming::http-client"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
# `reqwest-retry` kept as a workspace dep but not used directly
# here — our middleware honors per-method retry policy, which
# reqwest-retry's RetryableStrategy trait doesn't expose a hook
# for. The `reqwest-retry` crate is still a fine choice for
# consumers that don't need method-level filtering.
# reqwest-retry = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["time"] }
# `from_config` loads policy from TOML. `serde` derives the
# schema; `toml` parses it. Policy values live in
# `config/application.toml` + consumer overrides — never as
# hardcoded literals in source.
serde = { workspace = true }
toml = { workspace = true }
swe-edge-configbuilder.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = []
# Emit spans via the `tracing` crate. Off by default so consumers
# without tracing infrastructure don't pay the cost.
tracing = ["dep:tracing"]


[[test]]
name = "builder_e2e_test"
path = "tests/builder_e2e_test.rs"

[[test]]
name = "builder_int_test"
path = "tests/builder_int_test.rs"

[[test]]
name = "core_retry_layer_int_test"
path = "tests/core_retry_layer_int_test.rs"

[[test]]
name = "default_http_retry_int_test"
path = "tests/default_http_retry_int_test.rs"

[[test]]
name = "error_int_test"
path = "tests/error_int_test.rs"

[[test]]
name = "gateway_int_test"
path = "tests/gateway_int_test.rs"

[[test]]
name = "http_retry_int_test"
path = "tests/http_retry_int_test.rs"

[[test]]
name = "retry_config_int_test"
path = "tests/retry_config_int_test.rs"

[[test]]
name = "retry_layer_int_test"
path = "tests/retry_layer_int_test.rs"

[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "processor_int_test"
path = "tests/processor_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"
