[package]
name = "swe-edge-egress-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Client-side mTLS identity for reqwest — loads PKCS12 or PEM certificates and attaches them to a reqwest::ClientBuilder. Sibling crate to swe_edge_egress_auth (architectural split: TLS handshake layer, not HTTP middleware)."
keywords = ["http", "tls", "mtls", "reqwest", "identity"]
categories = ["web-programming::http-client", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "provider"

[lib]
path = "src/lib.rs"

[dependencies]
# native-tls backend — required for reqwest::Identity from PKCS12
# or PEM. Consumers choose the backend; native-tls is the most
# portable default (uses system's TLS stack: SChannel on Windows,
# Security.framework on macOS, OpenSSL on Linux).
reqwest = { workspace = true, features = ["native-tls", "rustls-tls"] }
http = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tempfile = "3"

[features]
default = []
tracing = ["dep:tracing"]
