[package]
name = "swe-edge-egress-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Client-side mTLS identity for reqwest — loads PKCS12 or PEM certificates and attaches them to a reqwest::ClientBuilder. Sibling crate to swe_edge_egress_auth (architectural split: TLS handshake layer, not HTTP middleware)."
keywords = ["http", "tls", "mtls", "reqwest", "identity"]
categories = ["web-programming::http-client", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "provider"

[lib]
path = "src/lib.rs"

[dependencies]
# native-tls backend — required for reqwest::Identity from PKCS12
# or PEM. Consumers choose the backend; native-tls is the most
# portable default (uses system's TLS stack: SChannel on Windows,
# Security.framework on macOS, OpenSSL on Linux).
reqwest = { workspace = true, features = ["native-tls", "rustls-tls"] }
http = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
secrecy = { workspace = true }
swe-edge-configbuilder.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tempfile = "3"

[features]
default = []
tracing = ["dep:tracing"]

[lints]
workspace = true

[[test]]
name = "builder_e2e_test"
path = "test/builder_e2e_test.rs"

[[test]]
name = "builder_int_test"
path = "test/builder_int_test.rs"

[[test]]
name = "core_tls_layer_int_test"
path = "test/core_tls_layer_int_test.rs"

[[test]]
name = "error_int_test"
path = "test/error_int_test.rs"

[[test]]
name = "gateway_int_test"
path = "test/gateway_int_test.rs"

[[test]]
name = "http_tls_int_test"
path = "test/http_tls_int_test.rs"

[[test]]
name = "identity_int_test"
path = "test/identity_int_test.rs"

[[test]]
name = "noop_http_tls_int_test"
path = "test/noop_http_tls_int_test.rs"

[[test]]
name = "pem_http_tls_int_test"
path = "test/pem_http_tls_int_test.rs"

[[test]]
name = "pkcs12_http_tls_int_test"
path = "test/pkcs12_http_tls_int_test.rs"

[[test]]
name = "tls_config_int_test"
path = "test/tls_config_int_test.rs"

[[test]]
name = "tls_factory_int_test"
path = "test/tls_factory_int_test.rs"

[[test]]
name = "tls_layer_int_test"
path = "test/tls_layer_int_test.rs"

[[test]]
name = "traits_int_test"
path = "test/traits_int_test.rs"
