[package]
name = "swe-edge-egress-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Client-side mTLS identity for reqwest — loads PKCS12 or PEM certificates and attaches them to a reqwest::ClientBuilder. Sibling crate to swe_edge_egress_auth (architectural split: TLS handshake layer, not HTTP middleware)."
keywords = ["http", "tls", "mtls", "reqwest", "identity"]
categories = ["web-programming::http-client", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "provider"

[lib]
path = "src/lib.rs"

[dependencies]
# native-tls backend — required for reqwest::Identity from PKCS12
# or PEM. Consumers choose the backend; native-tls is the most
# portable default (uses system's TLS stack: SChannel on Windows,
# Security.framework on macOS, OpenSSL on Linux).
reqwest = { workspace = true, features = ["native-tls", "rustls-tls"] }
http = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
secrecy = { workspace = true }
swe-edge-configbuilder.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tempfile = "3"

[features]
default = []
tracing = ["dep:tracing"]


[[test]]
name = "builder_e2e_test"
path = "tests/builder_e2e_test.rs"

[[test]]
name = "builder_int_test"
path = "tests/builder_int_test.rs"

[[test]]
name = "core_tls_layer_int_test"
path = "tests/core_tls_layer_int_test.rs"

[[test]]
name = "error_int_test"
path = "tests/error_int_test.rs"

[[test]]
name = "gateway_int_test"
path = "tests/gateway_int_test.rs"

[[test]]
name = "http_tls_int_test"
path = "tests/http_tls_int_test.rs"

[[test]]
name = "identity_int_test"
path = "tests/identity_int_test.rs"

[[test]]
name = "noop_http_tls_int_test"
path = "tests/noop_http_tls_int_test.rs"

[[test]]
name = "pem_http_tls_int_test"
path = "tests/pem_http_tls_int_test.rs"

[[test]]
name = "pkcs12_http_tls_int_test"
path = "tests/pkcs12_http_tls_int_test.rs"

[[test]]
name = "tls_config_int_test"
path = "tests/tls_config_int_test.rs"

[[test]]
name = "tls_factory_int_test"
path = "tests/tls_factory_int_test.rs"

[[test]]
name = "tls_layer_int_test"
path = "tests/tls_layer_int_test.rs"

[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "tls_svc_int_test"
path = "tests/tls_svc_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"
[[test]]
name = "tls_error_int_test"
path = "tests/tls_error_int_test.rs"
[[test]]
name = "provider_trait_int_test"
path = "tests/provider_trait_int_test.rs"

[[test]]
name = "secrecy_dep_int_test"
path = "tests/secrecy_dep_int_test.rs"

[[test]]
name = "provider_int_test"
path = "tests/provider_int_test.rs"
