[package]
name         = "swe-edge-egress-http-transport"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "edge — egress HTTP outbound domain: request/response types, outbound trait, and default reqwest-backed implementation."
keywords     = ["gateway", "egress", "http", "sea", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "transport"

[lib]
path = "src/lib.rs"

[features]
default = []
websocket = ["dep:tokio-tungstenite"]

[dependencies]
serde.workspace             = true
serde_json.workspace        = true
thiserror.workspace         = true
futures.workspace           = true
http.workspace              = true
tokio                       = { workspace = true, features = ["rt", "net"] }
reqwest.workspace           = true
reqwest-middleware.workspace = true
swe-edge-egress-auth.workspace     = true
swe-edge-egress-retry.workspace    = true
swe-edge-egress-rate.workspace     = true
swe-edge-egress-breaker.workspace  = true
swe-edge-egress-cache.workspace    = true
swe-edge-egress-cassette.workspace = true
swe-edge-egress-tls.workspace      = true
swe-edge-egress-oauth.workspace    = true
bytes.workspace                    = true
swe-observ-metrics.workspace       = true
tokio-tungstenite      = { version = "0.26", optional = true, features = ["rustls-tls-native-roots"] }
swe-edge-configbuilder = { workspace = true }

[[test]]
name = "default_http_egress_int_test"
path = "tests/default_http_egress_int_test.rs"

[[test]]
name = "http_int_test"
path = "tests/http_int_test.rs"

[[test]]
name = "http_egress_int_test"
path = "tests/http_egress_int_test.rs"

[[test]]
name = "metrics_http_egress_int_test"
path = "tests/metrics_http_egress_int_test.rs"

[[test]]
name = "reqwest_middleware_int_test"
path = "tests/reqwest_middleware_int_test.rs"

[[test]]
name = "tls_int_test"
path = "tests/tls_int_test.rs"

[[test]]
name = "http_egress_factory_int_test"
path = "tests/http_egress_factory_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "transport_svc_int_test"
path = "tests/transport_svc_int_test.rs"

[[test]]
name = "http_egress_from_config_int_test"
path = "tests/http_egress_from_config_int_test.rs"


[dev-dependencies]
tokio               = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
hyper               = { version = "1", features = ["http1", "server"] }
hyper-util          = { version = "0.1", features = ["tokio"] }
http-body-util      = "0.1"
bytes               = "1"
serde_json          = { workspace = true }
http                    = { workspace = true }
reqwest-middleware      = { workspace = true }
swe-edge-egress-tls     = { workspace = true }
swe-edge-egress-auth    = { workspace = true }
swe-edge-egress-retry   = { workspace = true }
swe-edge-egress-rate    = { workspace = true }
swe-edge-egress-breaker = { workspace = true }
swe-edge-egress-cache   = { workspace = true }
swe-edge-egress-cassette = { workspace = true }
swe-edge-egress-oauth    = { workspace = true }
futures                  = { workspace = true }
tokio-tungstenite        = { version = "0.26", features = ["rustls-tls-native-roots"] }
tempfile                 = "3"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "transport_config_int_test"
path = "tests/transport_config_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"

[[test]]
name = "http_egress_build_error_int_test"
path = "tests/http_egress_build_error_int_test.rs"

[[test]]
name = "metrics_http_egress_type_int_test"
path = "tests/metrics_http_egress_type_int_test.rs"

[[test]]
name = "http_stream_int_test"
path = "tests/http_stream_int_test.rs"

[[test]]
name = "http_egress_trait_int_test"
path = "tests/http_egress_trait_int_test.rs"

[[test]]
name = "http_egress_error_int_test"
path = "tests/http_egress_error_int_test.rs"

[[test]]
name = "http_egress_result_int_test"
path = "tests/http_egress_result_int_test.rs"

[[test]]
name = "always_valid_config_int_test"
path = "tests/always_valid_config_int_test.rs"

[[test]]
name = "form_part_int_test"
path = "tests/form_part_int_test.rs"

[[test]]
name = "http_auth_int_test"
path = "tests/http_auth_int_test.rs"

[[test]]
name = "http_body_int_test"
path = "tests/http_body_int_test.rs"

[[test]]
name = "http_config_int_test"
path = "tests/http_config_int_test.rs"

[[test]]
name = "http_config_builder_int_test"
path = "tests/http_config_builder_int_test.rs"

[[test]]
name = "http_method_int_test"
path = "tests/http_method_int_test.rs"

[[test]]
name = "http_request_int_test"
path = "tests/http_request_int_test.rs"

[[test]]
name = "http_request_builder_int_test"
path = "tests/http_request_builder_int_test.rs"

[[test]]
name = "http_response_int_test"
path = "tests/http_response_int_test.rs"

[[test]]
name = "http_stream_response_int_test"
path = "tests/http_stream_response_int_test.rs"

[[test]]
name = "observation_config_int_test"
path = "tests/observation_config_int_test.rs"

[[test]]
name = "sse_event_int_test"
path = "tests/sse_event_int_test.rs"

[[test]]
name = "sse_stream_int_test"
path = "tests/sse_stream_int_test.rs"

[[test]]
name = "transport_config_new_int_test"
path = "tests/transport_config_new_int_test.rs"

[[test]]
name = "validatable_http_config_int_test"
path = "tests/validatable_http_config_int_test.rs"

[[test]]
name = "ws_channel_int_test"
path = "tests/ws_channel_int_test.rs"

[[test]]
name = "ws_message_int_test"
path = "tests/ws_message_int_test.rs"

[[test]]
name = "ws_receiver_int_test"
path = "tests/ws_receiver_int_test.rs"

[[test]]
name = "ws_sender_int_test"
path = "tests/ws_sender_int_test.rs"

[[test]]
name = "http_config_validator_int_test"
path = "tests/http_config_validator_int_test.rs"

[[test]]
name = "tokio_tungstenite_dep_int_test"
path = "tests/tokio_tungstenite_dep_int_test.rs"

[[test]]
name = "http_egress_object_int_test"
path = "tests/http_egress_object_int_test.rs"

[[test]]
name = "metrics_http_egress_spec_int_test"
path = "tests/metrics_http_egress_spec_int_test.rs"

[[test]]
name = "http_transport_svc_int_test"
path = "tests/http_transport_svc_int_test.rs"

[[test]]
name = "validator_object_int_test"
path = "tests/validator_object_int_test.rs"
